--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="demo.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script src="../dist/angular-bayan.min.js"></script>
+    <script src="dist/angular-bayan.min.js"></script>
 
     <meta name="description"
           content="Bayan is an easily customizable accordion-like module for Angular!">
